# -cmakedemo1

./: CMakeLists.txt  main.cpp
MathFunctions/: CMakeLists.txt  mysqrt.cpp
